--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 				<h3 class="text-left mg-lg lake-hero-text-sub-s ">
 					A command line utility for managing your SSH connections.
 				</h3>
-				<a href="./bin/sshman.phar">Download .phar</a> | <a href="./bin/sshman.phar.pubkey">Download Public Key</a>
+				<a href="./sshman.phar">Download .phar</a> | <a href="./sshman.phar.pubkey">Download Public Key</a>
 			</div>
 			<div class="col-sm-6">
 
